# AdClose

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: android.yml
app/: AdClose.jks  build.gradle.kts  proguard-rules.pro
app/libs/: api-100.aar  interface-100.aar  service-100.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: blocked_full_urls.txt  blocked_hosts.txt  blocked_lists.txt  xposed_init
app/src/main/cpp/: CMakeLists.txt  http2_parser.cpp  native_hook.cpp
app/src/main/cpp/include/: http2_parser.h
app/src/main/cpp/nghttp2/: nghttp2_config.h
app/src/main/cpp/nghttp2/nghttp2/: nghttp2ver.h
app/src/main/res/anim/: slide_in_scale.xml  slide_out_scale.xml
app/src/main/res/drawable/: ad_block_notification_icon.xml  background_legend_circle.xml  background_log_tag.xml  ic_about.xml  ic_apps.xml  ic_auto_detect_ads.xml  ic_back.xml  ic_back_to_magnifier.xml  ic_bug.xml  ic_clipboard_paste.xml  ic_close.xml  ic_company.xml  ic_copy.xml  ic_database_export.xml  ic_database_import.xml  ic_export.xml  ic_feedback.xml  ic_filter.xml  ic_filter_alt.xml  ic_github.xml  ic_hook_manager.xml  ic_host.xml  ic_import.xml  ic_launcher.xml  ic_launcher_foreground.xml  ic_location.xml  ic_log.xml  ic_magnifier_to_back.xml  ic_menu.xml  ic_outline_delete_24.xml  ic_outline_file_save_24.xml  ic_outline_folder_managed_24.xml  ic_outline_visibility_24.xml  ic_person.xml  ic_requests.xml  ic_round_check_circle_24.xml  ic_search.xml  ic_sort.xml  ic_telegram.xml  marker_view_bg.xml  (+3 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+355 files in other folders)
